--- a/config/machines/levante/catalog/OSI-SAF/osi-450.yaml
+++ b/config/machines/levante/catalog/OSI-SAF/osi-450.yaml
@@ -3,8 +3,8 @@ plugins:
     - module: intake_xarray
 
 sources:
-  nh:
-    description: Northern hemisphere OSI-450 sea-ice data
+  nh-daily:
+    description: Daily Northern Hemisphere OSI-450 sea-ice data
     driver: netcdf
     #cache:
     #  - argkey: urlpath
@@ -15,8 +15,16 @@ sources:
       chunks: {}
       xarray_kwargs:
         decode_times: True
-
-  sh:
+  nh-monthly:
+    description: Monthly averages of Northern Hemisphere OSI-450 sea-ice data
+    driver: netcdf
+    args:
+      urlpath: '/work/bb1153/b382075/datasets/OSI-SAF/OSI-450/monthly/ice_conc_sh*.nc' 
+      chunks:
+        time: 12
+      xarray_kwargs:
+        decode_times: True
+  sh-daily:
     description: Southern hemisphere OSI-450 sea-ice data
     driver: netcdf
     #cache:
@@ -26,6 +34,15 @@ sources:
     args:
       urlpath: '/work/bb1153/b382075/datasets/OSI-SAF/OSI-450/raw/ice_conc_sh*.nc'
       chunks: {}
+      xarray_kwargs:
+        decode_times: True
+  sh-monthly:
+    description: Monthly averages of Southern Hemisphere OSI-450 sea-ice data
+    driver: netcdf
+    args:
+      urlpath: '/work/bb1153/b382075/datasets/OSI-SAF/OSI-450/monthly/ice_conc_sh*.nc' 
+      chunks:
+        time: 12
       xarray_kwargs:
         decode_times: True
 
