--- a/config/machines/levante/catalog/OSI-SAF/osi-450.yaml
+++ b/config/machines/levante/catalog/OSI-SAF/osi-450.yaml
@@ -19,7 +19,7 @@ sources:
     description: Monthly averages of Northern Hemisphere OSI-450 sea-ice data
     driver: netcdf
     args:
-      urlpath: '/work/bb1153/b382075/datasets/OSI-SAF/OSI-450/monthly/ice_conc_sh*.nc' 
+      urlpath: '/work/bb1153/b382075/datasets/OSI-SAF/OSI-450/monthly/ice_conc_nh_ease2-250_cdr_v2p0_monthly_1979-2015.nc' 
       chunks:
         time: 12
       xarray_kwargs:
@@ -40,7 +40,7 @@ sources:
     description: Monthly averages of Southern Hemisphere OSI-450 sea-ice data
     driver: netcdf
     args:
-      urlpath: '/work/bb1153/b382075/datasets/OSI-SAF/OSI-450/monthly/ice_conc_sh*.nc' 
+      urlpath: '/work/bb1153/b382075/datasets/OSI-SAF/OSI-450/monthly/ice_conc_sh_ease2-250_cdr_v2p0_monthly_1979-2015.nc' 
       chunks:
         time: 12
       xarray_kwargs:
