fix cycle3 update

--- a/diagnostics/tropical_cyclones/config/config_levante.yml
+++ b/diagnostics/tropical_cyclones/config/config_levante.yml
@@ -10,7 +10,7 @@ paths:
   regdir: '/scratch/b/b382216/regrid_tco2559-ng5-cycle3'
   tmpdir: '/scratch/b/b382216/tmpdir_tco2559-ng5-cycle3'
   fulldir: '/scratch/b/b382216/fullres_tco2559-ng5-cycle3'
-  plotdir: "/home/b/b382216/AQUA_test_logger/AQUA/diagnostics/tempest/plot"
+  plotdir: "/home/b/b382216/AQUA/AQUA/diagnostics/tropical_cyclones/plot"
 
 # grid on which operate
 grids:
@@ -18,7 +18,7 @@ grids:
   highgrid: 'r010'
 
 # variables to stored NOTE:cycle2 tprate cycle3 tp
-varlist: ['msl', '10u', '10v', 'tp']
+varlist: ['msl', '10u', '10v', 'tprate']
 
 # temporal definition (YYYY-MM-DD)
 time: 
