--- a/diagnostics/tropical_cyclones/config/config.yml
+++ b/diagnostics/tropical_cyclones/config/config.yml
@@ -1,15 +1,15 @@
 # experiment
 dataset:
   model: "IFS"
-  exp: "tco2559-ng5-cycle3"
+  #exp: "tco2559-ng5-cycle3"
+  exp: "tco1279-orca025-cycle3"
   source2d: "2D_1h_native"
   source3d: "3D_1h6h_native"
 
 # folders for regridded data, temprorary and stored high res data
 paths: 
-  regdir: '/scratch/b/b382216/regrid_tco2559-ng5-cycle3'
-  tmpdir: '/scratch/b/b382216/tmpdir_tco2559-ng5-cycle3'
-  fulldir: '/scratch/b/b382216/fullres_tco2559-ng5-cycle3'
+  tmpdir: '/scratch/b/b382216/tmpdir'
+  fulldir: '/scratch/b/b382216/fullres'
   plotdir: "/home/b/b382216/AQUA/AQUA/diagnostics/tropical_cyclones/plot"
 
 # grid on which operate
@@ -22,8 +22,8 @@ varlist: ['msl', '10u', '10v', 'tprate']
 
 # temporal definition (YYYY-MM-DD)
 time: 
-  startdate: '2020-04-09'
-  enddate: '2022-12-31'
+  startdate: '2020-01-20'
+  enddate: '2024-12-31'
   frequency: '6h'
 
 stream:
