--- a/diagnostics/tropical_cyclones/config/config.yml
+++ b/diagnostics/tropical_cyclones/config/config.yml
@@ -10,14 +10,15 @@ dataset:
 paths: 
   tmpdir: '/scratch/b/b382216/tmpdir'
   fulldir: '/scratch/b/b382216/fullres'
-  plotdir: "/home/b/b382216/AQUA/AQUA/diagnostics/tropical_cyclones/plot"
+  plotdir: "/home/b/b382216/AQUA/AQUA/diagnostics/tropical_cyclones/Figures/"
+
 
 # grid on which operate
 grids:
   lowgrid: 'r100'
   highgrid: 'r010'
 
-# variables to stored NOTE:cycle2 tprate cycle3 tp
+# variables to stored 
 varlist: ['msl', '10u', '10v', 'tprate']
 
 # temporal definition (YYYY-MM-DD)
