--- a/config/machines/lumi/regrid.yaml
+++ b/config/machines/lumi/regrid.yaml
@@ -49,8 +49,7 @@ source_grids:
         space_coord: ["rgrid"]
     ecearth-tco399:
       default:
-        path: /pfs/lustrep3/projappl/project_465000454/padavini/aqua/grids/tco399_grid.nc
-        space_coord: ["value"]
+        space_coord: ["lon", "lat"]
   ERA5:
     fdb:
       default:
