--- a/diagnostics/tropical_cyclones/environment-tcs.yml
+++ b/diagnostics/tropical_cyclones/environment-tcs.yml
@@ -1,5 +1,5 @@
-# Create the ECmean4 environment:
-# mamba env create -f environment.yml 
+# Create the tropical_cyclones environment:
+# mamba env create -f environment-tcs.yml 
 # or if you really want to use conda
 # conda env create -f environment.yml
 
@@ -24,28 +24,17 @@ dependencies:
   - intake-esm<=2021.8.17
   - intake
   - intake-xarray
+  # the tempest-extremes python library
   - tempest-extremes
 # these below are only required for running notebooks
   - ipykernel
   - healpy
-# these below are only required for tests
-  - pytest
-  - pytest-cov
-  - coverage[toml]
-  - pycobertura
 # these below are only required for documentation
   - sphinx
   - sphinx-rtd-theme
 # these are pip-based since it provides more recent versions or packages unavailable on conda-forge
   - pip
   - pip:
-    - sparse
-    - docker
-    - gribscan
-    - smmregrid
-    - dask_jobqueue
-    # get OPA
-    - git+https://oauth2:-nnxqtXxyrs3LrJubtH1@earth.bsc.es/gitlab/digital-twins/de_340/one_pass.git
     # pip install -e of AQUA itself
     - -e ../../
 
