--- a/config/machines/lumi/catalog/IFS/main.yaml
+++ b/config/machines/lumi/catalog/IFS/main.yaml
@@ -9,7 +9,7 @@ sources:
     driver: yaml_file_cat
     args:
       path: '{{CATALOG_DIR}}/tco79-eORCA1.yaml'
-  ecearth-tco399:  #  https://earth.bsc.es/gitlab/digital-twins/de_340/gsv_interface/-/wikis/Specifications-of-fdb-long
+  fdb-tco399:  #  https://earth.bsc.es/gitlab/digital-twins/de_340/gsv_interface/-/wikis/Specifications-of-fdb-long
     description: fdb-long data tco399 grid 
     driver: yaml_file_cat
     args:
