--- a/config/machines/lumi/regrid.yaml
+++ b/config/machines/lumi/regrid.yaml
@@ -47,9 +47,16 @@ source_grids:
       original_2d:
         path: ../AQUA_tests_short/grids/tco79_grid.nc
         space_coord: ["rgrid"]
-    ecearth-tco399:
+    fdb-tco399:
       default:
+        path:
+          2d: /projappl/project_465000454/jvonhar/aqua/grids/cellarea_lonlat_1440x720.nc
+          2dm: /projappl/project_465000454/jvonhar/aqua/grids/cellarea_lonlat_1440x720_masked.nc
+        masked_vars:
+          - ci
+          - sst
         space_coord: ["lon", "lat"]
+        vert_coord: ["2d", "2dm"]
   ERA5:
     fdb:
       default:
