--- a/config/machines/lumi/catalog/IFS/main.yaml
+++ b/config/machines/lumi/catalog/IFS/main.yaml
@@ -13,4 +13,4 @@ sources:
     description: fdb-long data tco399 grid 
     driver: yaml_file_cat
     args:
-      path: '{{CATALOG_DIR}}/ecearth-tco399.yaml'
+      path: '{{CATALOG_DIR}}/fdb-tco399.yaml'
