--- a/config/machines/levante/catalog/IFS/tco1279-orca025-cycle3.yaml
+++ b/config/machines/levante/catalog/IFS/tco1279-orca025-cycle3.yaml
@@ -9,7 +9,7 @@ sources:
       consolidated: false
       urlpath: 
         reference::/work/bm1235/b381679/IFS_cycle3/9km_nemo/gribscan_1h6h_native/json.dir/atm2d.json
-  3D_1h6h_native:
+  3D_1h_native:
     driver: zarr
     args:
       consolidated: false
@@ -33,7 +33,7 @@ sources:
       consolidated: false
       urlpath: 
         reference::/work/bm1235/b381679/IFS_cycle3/9km_nemo/gribscan_1h6h_0.25deg/json.dir/atm2d.json
-  3D_1h6h_0.25deg:
+  3D_1h_0.25deg:
     driver: zarr
     args:
       consolidated: false
@@ -57,12 +57,12 @@ sources:
       consolidated: false
       urlpath: 
         reference::/work/bm1235/b381679/IFS_cycle3/9km_nemo/gribscan_1h6h_1deg/json.dir/atm2d.json
-  3D_1h6h_1deg:
-    driver: zarr
-    args:
-      consolidated: false
-      urlpath: 
-        reference::/work/bm1235/b381679/IFS_cycle3/9km_nemo/gribscan_1h6h_1deg/json.dir/atm3d.json
+  # 3D_1h_1deg:
+  #   driver: zarr
+  #   args:
+  #     consolidated: false
+  #     urlpath: 
+  #       reference::/work/bm1235/b381679/IFS_cycle3/9km_nemo/gribscan_1h6h_1deg/json.dir/atm3d.json
   2D_monthly_1deg:
     driver: zarr
     args:
