--- a/config/machines/levante/catalog/IFS/tco2559-ng5-cycle3.yaml
+++ b/config/machines/levante/catalog/IFS/tco2559-ng5-cycle3.yaml
@@ -10,7 +10,7 @@ sources:
       urlpath: 
         - reference::/work/bm1235/a270046/cycle3/multio_cycle3/gribscan_1h6h_native/json.dir/atm2d.json
         - reference::/work/bm1235/a270046/cycle3/multio_cycle3/gribscan_1h6h_native_p2/json.dir/atm2d.json
-  3D_1h6h_native:
+  3D_1h_native:
     driver: zarr
     args:
       consolidated: false
