--- a/diagnostics/teleconnections/pyproject.toml
+++ b/diagnostics/teleconnections/pyproject.toml
@@ -25,8 +25,7 @@ classifiers = [
     "Programming Language :: Python :: Implementation :: CPython"
 ]
 dependencies = [
-    "xarray",
-    "sacpy"
+    "xarray"
 ]
 
 [tool.setuptools.package-data]
