--- a/.github/workflows/tropical-rainfall-diagnostic.yml
+++ b/.github/workflows/tropical-rainfall-diagnostic.yml
@@ -3,8 +3,8 @@ name: tropical rainfall diagnostic test
 on:
   pull_request:
     paths:
-      - 'diagnostics/tropical-rainfall-diagnostic/**'
-      - 'tests/tropical-rainfall-diagnostic/**'
+      - 'diagnostics/tropical_rainfall/**'
+      - 'tests/tropical-rainfall/**'
   workflow_dispatch:
   schedule:
     - cron: "0 3 * * 1" # Run every Monday night at 3AM UTC
@@ -28,7 +28,7 @@ jobs:
       - name: Setup Micromamba with diagnostic environment
         uses: mamba-org/setup-micromamba@v1
         with:
-          environment-file: environment.yml  #diagnostics/tropical-rainfall-diagnostic/env-tropical-rainfall.yml
+          environment-file: diagnostics/tropical_rainfall/env-tropical-rainfall.yml
           cache-downloads: true
           cache-environment: true
           condarc: |
