--- a/.github/workflows/tropical-rainfall-diagnostic.yml
+++ b/.github/workflows/tropical-rainfall-diagnostic.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Setup Micromamba with diagnostic environment
         uses: mamba-org/setup-micromamba@v1
         with:
-          environment-file: environment.yml  #diagnostics/tropical_rainfall/env-tropical-rainfall.yml
+          environment-file: diagnostics/tropical_rainfall/env-tropical-rainfall.yml
           cache-downloads: true
           cache-environment: true
           condarc: |
