One not necessary package is added

--- a/diagnostics/tropical_rainfall/env-tropical-rainfall.yml
+++ b/diagnostics/tropical_rainfall/env-tropical-rainfall.yml
@@ -41,6 +41,7 @@ dependencies:
   - pip
   - pip:
     - fast_histogram
+    - boost_histogram
     - dask_histogram
     - sparse
     - dask_jobqueue
