--- a/diagnostics/teleconnections/cli/comparison_analysis/cycle3_setup/teleconnections_config-NAO.yaml
+++ b/diagnostics/teleconnections/cli/comparison_analysis/cycle3_setup/teleconnections_config-NAO.yaml
@@ -9,8 +9,8 @@ sources:
   ifs1: # name of the dataset only in this file
     model: 'IFS'
     exp: 'tco1279-orca025-cycle3'
-    source: '2D_monthly_native'
-    regrid: 'r100'
+    source: 'lra-r100-monthly'
+    regrid: null
     freq: null
     zoom: null
     months_window: 3
@@ -31,10 +31,10 @@ sources:
   icon:
     model: 'ICON'
     exp: 'ngc3028'
-    source: 'P1D'
-    regrid: 'r100'
-    freq: 'monthly'
-    zoom: 6
+    source: 'lra-r100-monthly'
+    regrid: null
+    freq: null
+    zoom: null
     months_window: 3
     outputfig: *common_outputfig
     outputdir: *common_outputdir
