--- a/config/fixes/FESOM.yaml
+++ b/config/fixes/FESOM.yaml
@@ -70,4 +70,12 @@ models:
                         src_units: degC
                         grib: true
                         units: degC # Override units from grib tables
+
+            lra-r100-monthly:
+                data_model: False
+                vars:
+                    sst: 
+                        derived: sst
+                        grib: true
+                        units: K
     
