--- a/diagnostics/teleconnections/cli/comparison_analysis/cycle3_setup/teleconnections_config-ENSO.yaml
+++ b/diagnostics/teleconnections/cli/comparison_analysis/cycle3_setup/teleconnections_config-ENSO.yaml
@@ -6,10 +6,10 @@ configdir: '/home/b/b382289/AQUA/diagnostics/teleconnections/config'
 
 # Create a new block for each dataset to compare
 sources:
-  ifs1: # name of the dataset only in this file
+  ifs-1279: # name of the dataset only in this file
     model: 'IFS'
     exp: 'tco1279-orca025-cycle3'
-    source: '2D_monthly_native'
+    source: '2D_monthly_native' 
     regrid: 'r100'
     freq: null
     zoom: null
@@ -17,11 +17,11 @@ sources:
     outputfig: *common_outputfig
     outputdir: *common_outputdir
     #filename: 'custom_filename'
-  ifs2:
-    model: 'IFS'
+  fesom-2559:
+    model: 'FESOM'
     exp: 'tco2559-ng5-cycle3'
-    source: '2D_monthly_1deg' # to be regridded anyway since it's an unstructured grid
-    regrid: 'r100'
+    source: 'lra-r100-monthly'
+    regrid: null
     freq: null
     zoom: null
     months_window: 3
@@ -31,10 +31,10 @@ sources:
   icon:
     model: 'ICON'
     exp: 'ngc3028'
-    source: 'P1D'
-    regrid: 'r100'
-    freq: 'monthly'
-    zoom: 6
+    source: 'lra-r100-monthly'
+    regrid: null
+    freq: null
+    zoom: null
     months_window: 3
     outputfig: *common_outputfig
     outputdir: *common_outputdir
