--- a/diagnostics/tropical_rainfall/env-tropical-rainfall.yml
+++ b/diagnostics/tropical_rainfall/env-tropical-rainfall.yml
@@ -3,7 +3,7 @@
 # Alternatively, use mamba
 #   mamba env create -f env-tropical-rainfall.yml
 
-name : tropical-rainfall_m
+name : tropical-rainfall_minimal
 channels:
   - conda-forge
   - numba
@@ -54,6 +54,4 @@ dependencies:
     - git+https://oauth2:NrMi_dshtmNeaWy9F3sz@earth.bsc.es/gitlab/digital-twins/de_340/gsv_interface.git
     # pip install -e of AQUA itself
     - -e ./../../[all]
-    - fast_histogram
-    - dask_histogram
     
