Restructuring the notebook folder

--- a/diagnostics/tropical_rainfall/env-tropical-rainfall.yml
+++ b/diagnostics/tropical_rainfall/env-tropical-rainfall.yml
@@ -3,7 +3,7 @@
 # Alternatively, use mamba
 #   mamba env create -f env-tropical-rainfall.yml
 
-name : tropical-rainfall_minimal
+name : tropical-rainfall
 channels:
   - conda-forge
   - numba
