--- a/diagnostics/global_ocean/config.yaml
+++ b/diagnostics/global_ocean/config.yaml
@@ -1,8 +1,43 @@
-# Config file for Global Ocean diagnostics
-# This file is in YAML format
+model: 'FESOM' 
+exp: 'tco2559-ng5-cycle3'
+source: "lra-r100-monthly"
 
-# It may contains folder defaults
-outputfig: './figs'
-outputdir: './output'
-filename: 'dummy'
-custom_diagvar: 'I was read from config.yaml'
+hovmoller_plot:
+  region: "Global Ocean"
+  latS:
+  latN:
+  lonE:
+  lonW:
+  type: "FUllvalue"
+  output: True
+  output_dir: './output'
+
+time_series:
+  region: "Global Ocean"
+  latS:
+  latN:
+  lonE:
+  lonW:
+  type: "anomally"
+  customise_level:
+  levels :
+  output: True
+  output_dir: './output'
+
+multilevel_trend:
+  region: "Global Ocean"
+  latS:
+  latN:
+  lonE:
+  lonW:
+  output: True
+  output_dir: './output'
+
+zonal_mean_trend:
+  region: "Indian Ocean "
+  latS:
+  latN:
+  lonE:
+  lonW:
+  output: True
+  output_dir: "output"
