--- a/common_environment.yml
+++ b/common_environment.yml
@@ -40,6 +40,7 @@ dependencies:
   - python-cdo
   - xesmf
   - tempest-extremes
+  - wand # just for plotting
 # these are pip-based since it provides more recent versions or packages unavailable on conda-forge
   - pip
   - pip:
