--- a/.github/workflows/teleconnections.yaml
+++ b/.github/workflows/teleconnections.yaml
@@ -36,7 +36,7 @@ jobs:
       - name: Setup Micromamba with teleconnections environment
         uses: mamba-org/setup-micromamba@v1
         with:
-          environment-file: diagnostics/teleconnections/env-teleconnections.yaml
+          environment-file: common_environment.yml 
           environment-name: teleconnections
           cache-downloads: true
           cache-environment: true
