--- a/.github/workflows/tropical-rainfall-diagnostic.yml
+++ b/.github/workflows/tropical-rainfall-diagnostic.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Setup Micromamba with diagnostic environment
         uses: mamba-org/setup-micromamba@v1
         with:
-          environment-file: diagnostics/tropical_rainfall/env-tropical-rainfall.yml
+          environment-file: common_environment.yml 
           cache-downloads: true
           cache-environment: true
           condarc: |
@@ -51,4 +51,4 @@ jobs:
 
       - name: Run tropical-rainfall tests
         run: |
-          pytest -v -m tropical_rainfall
+          pytest -v -m tropical_rainfallls
