--- a/.github/workflows/tropical-rainfall-diagnostic.yml
+++ b/.github/workflows/tropical-rainfall-diagnostic.yml
@@ -1,5 +1,5 @@
 name: tropical rainfall diagnostic test
-
+# comment line is added to test all workflows with a common environment
 on:
   pull_request:
     paths:
