The information about the common environment file is added to the readme file

--- a/.github/workflows/tropical-rainfall-diagnostic.yml
+++ b/.github/workflows/tropical-rainfall-diagnostic.yml
@@ -51,4 +51,4 @@ jobs:
 
       - name: Run tropical-rainfall tests
         run: |
-          pytest -v -m tropical_rainfallls
+          pytest -v -m tropical_rainfall
