--- a/environment-common.yml
+++ b/environment-common.yml
@@ -1,7 +1,7 @@
 # Create the environment:
-# mamba env create -f common_environment.yml 
+# mamba env create -f environment-common.yml 
 # or if you really want to use conda
-# conda env create -f common_environment.yml
+# conda env create -f environment-common.yml
 
 name: common_environment
 channels:
