--- a/.github/workflows/aqua.yml
+++ b/.github/workflows/aqua.yml
@@ -48,7 +48,7 @@ jobs:
         uses: mamba-org/setup-micromamba@v1
         with:
           environment-file: common_environment.yml 
-          environment-name: aqua
+          environment-name: aqua_common
           cache-downloads: true
           cache-environment: true
           condarc: |
