--- a/.github/workflows/aqua.yml
+++ b/.github/workflows/aqua.yml
@@ -47,8 +47,8 @@ jobs:
       - name: Setup Micromamba
         uses: mamba-org/setup-micromamba@v1
         with:
-          environment-file: common_environment.yml 
-          environment-name: aqua_common
+          environment-file: environment_common.yml 
+          environment-name: aqua
           cache-downloads: true
           cache-environment: true
           condarc: |
