--- a/.github/workflows/aqua.yml
+++ b/.github/workflows/aqua.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Setup Micromamba
         uses: mamba-org/setup-micromamba@v1
         with:
-          environment-file: environment_common.yml 
+          environment-file: environment-common.yml 
           environment-name: aqua
           cache-downloads: true
           cache-environment: true
