--- a/.github/workflows/tropical-rainfall-diagnostic.yml
+++ b/.github/workflows/tropical-rainfall-diagnostic.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Setup Micromamba with diagnostic environment
         uses: mamba-org/setup-micromamba@v1
         with:
-          environment-file: common-environment.yml
+          environment-file: environment-common.yml
           environment-name: tropical-rainfall
           cache-downloads: true
           cache-environment: true
