--- a/.github/workflows/tropical-rainfall-diagnostic.yml
+++ b/.github/workflows/tropical-rainfall-diagnostic.yml
@@ -5,6 +5,8 @@ on:
     paths:
       - 'diagnostics/tropical_rainfall/**'
       - 'tests/tropical-rainfall/**'
+    types:
+      - labeled
   workflow_dispatch:
   schedule:
     - cron: "0 3 * * 1" # Run every Monday night at 3AM UTC
@@ -14,6 +16,7 @@ permissions:
 
 jobs:
   tropical-rainfall-diagnostic_test:
+    if: ${{ github.event.label.name == 'Ready to merge' }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
