--- a/.github/workflows/dummy-diagnostic.yml
+++ b/.github/workflows/dummy-diagnostic.yml
@@ -3,16 +3,19 @@ name: dummy diagnostic test
 on:
   # Not triggering the dummy diagnostic test on pull requests
   # in order to waste less resources
-  #pull_request:
+  # pull_request:
   #  paths:
   #    - 'diagnostics/dummy/**'
   #    - 'tests/dummy/**'
+  #  types:
+  #    - labeled
   workflow_dispatch:
   #schedule:
   #  - cron: "0 3 * * 1" # Run every Monday night at 3AM UTC
 
 jobs:
   dummy-diagnostic_test:
+    if: ${{ github.event.label.name == 'Ready to merge' }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
