--- a/.github/workflows/aqua.yml
+++ b/.github/workflows/aqua.yml
@@ -16,7 +16,7 @@ permissions:
 
 jobs:
   aqua_test:
-    if: ${{ github.event.label.name == 'Ready to merge' }}
+    if: contains(github.event.pull_request.labels.*.name, 'Ready to merge')
     env:
       # You can disable coverage by changing this to false. You can
       # also add other Python versions to the matrix, pinning the
