test or in contains

--- a/.github/workflows/aqua.yml
+++ b/.github/workflows/aqua.yml
@@ -14,7 +14,7 @@ permissions:
 
 jobs:
   aqua_test:
-    if: contains(github.event.pull_request.labels.*.name, 'Ready to merge') || ${{github.event.label.name == 'Ready to merge'}}
+    if: contains(github.event.pull_request.labels.*.name, 'Ready to merge') || contains(github.event.label.name, 'Ready to merge')
     env:
       # You can disable coverage by changing this to false. You can
       # also add other Python versions to the matrix, pinning the
@@ -45,118 +45,118 @@ jobs:
 #        run: sudo apt-get install -y fdb5
       - name: Checkout code
         uses: actions/checkout@v3
-      - name: Setup Micromamba
-        uses: mamba-org/setup-micromamba@v1
-        with:
-          environment-file: environment-common.yml 
-          environment-name: aqua
-          cache-downloads: true
-          cache-environment: true
-          condarc: |
-            channels:
-              - numba
-              - conda-forge
-          create-args: >-
-              python=${{ matrix.python-version }}
-      - name: Download and setup tests
-        run: |
-          ./download_data_for_tests.sh
-      # Using GH Action https://github.com/marketplace/actions/cargo-install
-      # as it caches the binary installation (the official cargo is tailored for
-      # building Rust applications, this one is for installing tools with Cargo).
-      - name: Install htmlq
-        if: ${{ env.COVERAGE_ENABLED }}
-        uses: baptiste0928/cargo-install@v2
-        with:
-          crate: htmlq
-          cache-key: cargo-coverage
-      - run: cargo install htmlq
-        if: ${{ env.COVERAGE_ENABLED }}
-      - name: Run tests
-        # NOTE: We could gain a few seconds in the build, if needed,
-        #       by running with coverage in only one matrix job run.
-        run: |
-          # Produce the HTML report. Defaults to writing in htmlcov/index.html.
-          pytest --cov=aqua --cov-report=html --cov-report=xml --cov-branch -m "aqua or slow"
+      # - name: Setup Micromamba
+      #   uses: mamba-org/setup-micromamba@v1
+      #   with:
+      #     environment-file: environment-common.yml 
+      #     environment-name: aqua
+      #     cache-downloads: true
+      #     cache-environment: true
+      #     condarc: |
+      #       channels:
+      #         - numba
+      #         - conda-forge
+      #     create-args: >-
+      #         python=${{ matrix.python-version }}
+      # - name: Download and setup tests
+      #   run: |
+      #     ./download_data_for_tests.sh
+      # # Using GH Action https://github.com/marketplace/actions/cargo-install
+      # # as it caches the binary installation (the official cargo is tailored for
+      # # building Rust applications, this one is for installing tools with Cargo).
+      # - name: Install htmlq
+      #   if: ${{ env.COVERAGE_ENABLED }}
+      #   uses: baptiste0928/cargo-install@v2
+      #   with:
+      #     crate: htmlq
+      #     cache-key: cargo-coverage
+      # # - run: cargo install htmlq
+      # #   if: ${{ env.COVERAGE_ENABLED }}
+      # - name: Run tests
+      #   # NOTE: We could gain a few seconds in the build, if needed,
+      #   #       by running with coverage in only one matrix job run.
+      #   run: |
+      #     # Produce the HTML report. Defaults to writing in htmlcov/index.html.
+      #     pytest --cov=aqua --cov-report=html --cov-report=xml --cov-branch -m "aqua or slow"
           
-          if [[ ${COVERAGE_ENABLED} ]]; then
-            # Extract the top header of the pytest HTML report.
-            # Passes the HTML through htmlq, extracting the first H1 displayed.
-            # Uses tr to delete breaklines and squeeze-repeats blank spaces,
-            # saving space - this is used for an HTTP REST request to GitHub API.
-            COV_HEADER=$(cat htmlcov/index.html | htmlq --pretty 'header > div > h1:first-of-type' | tr -d '\n' | tr -s ' ')
+      #     if [[ ${COVERAGE_ENABLED} ]]; then
+      #       # Extract the top header of the pytest HTML report.
+      #       # Passes the HTML through htmlq, extracting the first H1 displayed.
+      #       # Uses tr to delete breaklines and squeeze-repeats blank spaces,
+      #       # saving space - this is used for an HTTP REST request to GitHub API.
+      #       COV_HEADER=$(cat htmlcov/index.html | htmlq --pretty 'header > div > h1:first-of-type' | tr -d '\n' | tr -s ' ')
             
-            # Extract the table of the pytest HTML report.
-            # Passes the HTML through htmlq, extracting the table element.
-            # Uses tr to delete breaklines and squeeze-repeats blank spaces.
-            # Then calls sed with an expression that replaces the HTML a
-            # elements by only its text.
-            COV_TABLE=$(cat htmlcov/index.html | htmlq --pretty 'table' | tr -d '\n' | tr -s ' ' | sed 's|<a[^>]*>\([^<]*\)</a>|\1|g')
+      #       # Extract the table of the pytest HTML report.
+      #       # Passes the HTML through htmlq, extracting the table element.
+      #       # Uses tr to delete breaklines and squeeze-repeats blank spaces.
+      #       # Then calls sed with an expression that replaces the HTML a
+      #       # elements by only its text.
+      #       COV_TABLE=$(cat htmlcov/index.html | htmlq --pretty 'table' | tr -d '\n' | tr -s ' ' | sed 's|<a[^>]*>\([^<]*\)</a>|\1|g')
 
-            # Produce an simplified HTML report.
-            echo "${COV_HEADER}${COV_TABLE}" > coverage.html
+      #       # Produce an simplified HTML report.
+      #       echo "${COV_HEADER}${COV_TABLE}" > coverage.html
 
-            # Now simply use pandoc to convert HTML to Markdown.
-            pandoc --from html --to 'markdown_strict+pipe_tables' coverage.html -o coverage.md
+      #       # Now simply use pandoc to convert HTML to Markdown.
+      #       pandoc --from html --to 'markdown_strict+pipe_tables' coverage.html -o coverage.md
 
-            # Append the missing lines, using pycobertura (which was used previously,
-            # but replaced by pandoc/htmlq due to missing branch coverage info
-            # https://github.com/aconrad/pycobertura/issues/167
-            pycobertura show coverage.xml --format markdown --source aqua | awk -F"|" '{print "|" $2 "|" $6 "|"}' > missing.md
+      #       # Append the missing lines, using pycobertura (which was used previously,
+      #       # but replaced by pandoc/htmlq due to missing branch coverage info
+      #       # https://github.com/aconrad/pycobertura/issues/167
+      #       pycobertura show coverage.xml --format markdown --source aqua | awk -F"|" '{print "|" $2 "|" $6 "|"}' > missing.md
           
-            echo -en '\n\n## Missing Lines\n\n' >> coverage.md
+      #       echo -en '\n\n## Missing Lines\n\n' >> coverage.md
 
-            cat missing.md >> coverage.md
-          fi
-      - name: Publish coverage reports (stdout)
-        # Publish the coverage reports in only one matrix job run.
-        # Only run if **NOT** running in a pull request (see step below).
-        if: ${{ github.event_name != 'pull_request' && env.COVERAGE_ENABLED }}
-        run: |
-          cat coverage.md
-      - name: Publish coverage reports (bot)
-        # Publish the coverage reports in only one matrix job run.
-        # Only run if running in a pull request.
-        # See for more: https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#example-using-contexts
-        if: ${{ github.event_name == 'pull_request' && env.COVERAGE_ENABLED }}
-        # Comment on an issue or pull request using GH Actions tooling:
-        # https://github.com/actions/github-script#comment-on-an-issue
-        uses: actions/github-script@v6
-        id: coverage-report
-        with:
-          github-token: ${{secrets.GITHUB_TOKEN}}
-          # Based on: https://github.com/actions/github-script/blob/060d68304cc19ea84d828af10e34b9c6ca7bdb31/.github/workflows/pull-request-test.yml
-          script: |
-            // Get the existing comments.
-            const {data: comments} = await github.rest.issues.listComments({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: context.payload.number,
-            })
+      #       cat missing.md >> coverage.md
+      #     fi
+      # - name: Publish coverage reports (stdout)
+      #   # Publish the coverage reports in only one matrix job run.
+      #   # Only run if **NOT** running in a pull request (see step below).
+      #   if: ${{ github.event_name != 'pull_request' && env.COVERAGE_ENABLED }}
+      #   run: |
+      #     cat coverage.md
+      # - name: Publish coverage reports (bot)
+      #   # Publish the coverage reports in only one matrix job run.
+      #   # Only run if running in a pull request.
+      #   # See for more: https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#example-using-contexts
+      #   if: ${{ github.event_name == 'pull_request' && env.COVERAGE_ENABLED }}
+      #   # Comment on an issue or pull request using GH Actions tooling:
+      #   # https://github.com/actions/github-script#comment-on-an-issue
+      #   uses: actions/github-script@v6
+      #   id: coverage-report
+      #   with:
+      #     github-token: ${{secrets.GITHUB_TOKEN}}
+      #     # Based on: https://github.com/actions/github-script/blob/060d68304cc19ea84d828af10e34b9c6ca7bdb31/.github/workflows/pull-request-test.yml
+      #     script: |
+      #       // Get the existing comments.
+      #       const {data: comments} = await github.rest.issues.listComments({
+      #         owner: context.repo.owner,
+      #         repo: context.repo.repo,
+      #         issue_number: context.payload.number,
+      #       })
 
-            // Find any comment already made by the bot.
-            const botComment = comments.find(comment => comment.user.id === 41898282)
-            const fs = require("fs").promises
-            let commentBody = await fs.readFile("coverage.md", "utf8")
-            // Replace _ by \_ since it is Markdown. Pandoc already adds it,
-            // but pycobertura does not adds it. Thus the negative lookahead
-            // ignoring already escaped underscores.
-            commentBody = `${commentBody}`.replace(/_(?<!\\_)/g, '\\_')
+      #       // Find any comment already made by the bot.
+      #       const botComment = comments.find(comment => comment.user.id === 41898282)
+      #       const fs = require("fs").promises
+      #       let commentBody = await fs.readFile("coverage.md", "utf8")
+      #       // Replace _ by \_ since it is Markdown. Pandoc already adds it,
+      #       // but pycobertura does not adds it. Thus the negative lookahead
+      #       // ignoring already escaped underscores.
+      #       commentBody = `${commentBody}`.replace(/_(?<!\\_)/g, '\\_')
 
-            if (botComment) {
-              console.log(`Updating comment in ${context.repo.owner}/${context.repo.repo}, comment ID: ${botComment.id}`)
-              await github.rest.issues.updateComment({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                comment_id: botComment.id,
-                body: commentBody
-              })
-            } else {
-              console.log(`Creating comment in ${context.repo.owner}/${context.repo.repo}`)
-              await github.rest.issues.createComment({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                issue_number: context.issue.number,
-                body: commentBody
-              })
-            }
+      #       if (botComment) {
+      #         console.log(`Updating comment in ${context.repo.owner}/${context.repo.repo}, comment ID: ${botComment.id}`)
+      #         await github.rest.issues.updateComment({
+      #           owner: context.repo.owner,
+      #           repo: context.repo.repo,
+      #           comment_id: botComment.id,
+      #           body: commentBody
+      #         })
+      #       } else {
+      #         console.log(`Creating comment in ${context.repo.owner}/${context.repo.repo}`)
+      #         await github.rest.issues.createComment({
+      #           owner: context.repo.owner,
+      #           repo: context.repo.repo,
+      #           issue_number: context.issue.number,
+      #           body: commentBody
+      #         })
+      #       }
