fix for masked tco1279

--- a/config/machines/levante/regrid.yaml
+++ b/config/machines/levante/regrid.yaml
@@ -89,7 +89,13 @@ source_grids:
       default: 
         space_coord: ["lon", "lat"]
       2D_1h_native:
-        path: /work/bm1235/ifs-grids/tco_grids/tco1279_grid.nc
+        path: 
+          2d: /work/bb1153/b382076/AQUA-archive/grids/IFS/tco1279_grid.nc
+          2dm: /work/bb1153/b382076/AQUA-archive/grids/IFS/tco1279_grid_masked.nc
+        masked_vars:
+          - ci
+          - sst
+        vert_coord: ["2d", "2dm"]
         space_coord: ["value"]
       3D_1h_native:
         path: /work/bm1235/ifs-grids/tco_grids/tco1279_grid.nc
@@ -116,8 +122,14 @@ source_grids:
   
     tco1279-orca025:
       ICMGG_atm2d:
-        path: /work/bm1344/AWI/nextGEMS_Cycle2_IFS/tcogrids/9km/tcogrids/tco1279_grid.nc
-        space_coord:
+        path: 
+          2d: /work/bb1153/b382076/AQUA-archive/grids/IFS/tco1279_grid.nc
+          2dm: /work/bb1153/b382076/AQUA-archive/grids/IFS/tco1279_grid_masked.nc
+        masked_vars:
+          - ci
+          - sst
+        vert_coord: ["2d", "2dm"]
+        space_coord: 
         - value
       ICMU_atm2d:
         path: /work/bm1344/AWI/nextGEMS_Cycle2_IFS/tcogrids/9km/tcogrids/tco1279_grid.nc
@@ -466,8 +478,8 @@ source_grids:
     era5:
       default:
         path: 
-          2d: /work/bb1153/b382075/nextgems/grids/r025_grid.nc
-          2dm: /work/bb1153/b382075/nextgems/grids/r025_grid_masked.nc
+        - 2d: /work/bb1153/b382075/nextgems/grids/r025_grid.nc
+        - 2dm: /work/bb1153/b382075/nextgems/grids/r025_grid_masked.nc
         masked_vars:
           - sst
           - SSTK
